--- a/src/modules/scss/header.scss
+++ b/src/modules/scss/header.scss
@@ -1,6 +1,14 @@
 @import 'fonts';
 
+:root{
+    font-size: 10px;
+}
+
 .container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
     max-width: 1120px;
 }
 
@@ -11,18 +19,28 @@
     font-weight: 700;
     line-height: normal;
     color: #5C6A79;
+    text-transform: uppercase;
 }
 
 .header__navigation{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    text-transform: none;
+}
+
+.header__logo_text{
+    font-size: 24px;
+    color: #1C2A39;
 }
 
 .header__links{
+    font-family: $montserratBlack;
     list-style: none;
     display: flex;
     gap: 4em;
     text-transform: uppercase;
+    font-weight: 900;
 }
 
 .header__link_item{
@@ -44,4 +62,8 @@
     list-style: none;
     display: flex;
     gap: 4em;
+}
+
+.header__img:hover{
+    scale: 1.5;
 }
