--- a/src/modules/scss/slider.scss
+++ b/src/modules/scss/slider.scss
@@ -1,10 +1,10 @@
 @import 'fonts';
 
 .slider{
-    position: relative;
     display: flex;
     flex-direction: column;
     gap: 17px;
+    margin-top: 18px;
 }
 
 .slider__container{
@@ -40,23 +40,23 @@
 }
 
 .slider__card-link_violet{
-    width: 109px;
-    height: 66px;
-    padding: 102px 20px 36px 20px;
-    background-color: #9E98DC;
-    top: 78px;
-    right: -91px;
+    background-color: #9e98dc;
     background-position: bottom 19px left 20px;
+    height: 66px;
+    padding: 102px 20px 36px;
+    right: 74px;
+    top: 174px;
+    width: 109px;
 }
 
 .slider__card-link_pink{
-    width: 68px;
+    background-color: #ff8fe6;
+    background-position: bottom 19px left 21px;
     height: 88px;
     padding: 149px 47px 36px 21px;
-    background-color: #FF8FE6;
-    bottom: 100px;
-    right: -160px;
-    background-position: bottom 19px left 21px;
+    right: 0;
+    width: 68px;
+    top: 454px;
 }
 
 .header__control-panel{
