--- a/src/modules/scss/header.scss
+++ b/src/modules/scss/header.scss
@@ -6,6 +6,13 @@
 }
 
 .container{
+    max-width: 1440px;
+    width: 100%;
+    position: relative;
+    margin: 0 auto;
+}
+
+.container_content{
     display: flex;
     flex-direction: column;
     justify-content: center;
