The styles for the navigation and slider buttons have been fixed

--- a/src/modules/scss/header.scss
+++ b/src/modules/scss/header.scss
@@ -130,11 +130,10 @@
         display: block;
     }
     
-    .header__menu-mob:hover{
-        .header__links{
-            display: flex;
-        }
+    .header__links{
+        display: none;
     }
+    
 }
 
 @media(max-width:375px){
