--- a/src/modules/scss/header.scss
+++ b/src/modules/scss/header.scss
@@ -105,6 +105,7 @@
 @media (max-width: 425px){
     .header__navigation{
         width: 370px;
+        position: relative;
     }
 
     .header__logo_text{
@@ -115,7 +116,14 @@
         flex-direction: column;
         gap: 5px;
         font-size: 8px;
-        display: none;
+        position: absolute;
+        z-index: 1;
+        left: calc(50% - 41px);
+        top: 24px;
+        background: #efeef6;
+        padding: 10px;
+        border-radius: 6px;
+    
     }
 
     .header__icons{
@@ -128,9 +136,10 @@
 
     .header__menu-mob{
         display: block;
+        cursor: pointer;
     }
-    
-    .header__links{
+
+    .hide{
         display: none;
     }
     
