Font files have been optimized

--- a/src/modules/scss/fonts.scss
+++ b/src/modules/scss/fonts.scss
@@ -1,29 +1,29 @@
 @font-face {
 	font-family: 'Montserrat Medium'; 
 	src: 
-        url('../../fonts/Montserrat/Montserrat-Medium.woff'),
-        url('../../fonts/Montserrat/Montserrat-Medium.ttf'); 
+        url('../../fonts/Montserrat/Montserrat-Medium.woff2'),
+        url('../../fonts/Montserrat/Montserrat-Medium.woff'); 
 }
 
 @font-face {
 	font-family: 'Montserrat Bold'; 
 	src: 
-        url('../../fonts/Montserrat/Montserrat-Bold.woff'),
-        url('../../fonts/Montserrat/Montserrat-Bold.ttf'); 
+        url('../../fonts/Montserrat/Montserrat-Bold.woff2'),
+        url('../../fonts/Montserrat/Montserrat-Bold.woff'); 
 }
 
 @font-face {
 	font-family: 'Montserrat Black'; 
 	src: 
-        url('../../fonts/Montserrat/Montserrat-Black.woff'),
-        url('../../fonts/Montserrat/Montserrat-Black.ttf'); 
+        url('../../fonts/Montserrat/Montserrat-Black.woff2'),
+        url('../../fonts/Montserrat/Montserrat-Black.woff'); 
 }
 
 @font-face {
 	font-family: 'Open Sans'; 
 	src: 
-        url('../../fonts/Open_Sans/OpenSans.woff'),
-        url('../../fonts/Open_Sans/OpenSans.ttf'); 
+        url('../../fonts/Open_Sans/OpenSans.woff2'),
+        url('../../fonts/Open_Sans/OpenSans.woff'); 
 }
 
 $montserratMedium: 'Montserrat Medium';
