Added functions for code optimization

--- a/src/modules/scss/header.scss
+++ b/src/modules/scss/header.scss
@@ -79,7 +79,7 @@
 .header__purchase-counter{
     position: absolute;
     display: none;
-    font-family: 'Montserrat Medium';
+    font-family: $montserratMedium;
     color: #FFF;
     text-align: center;
     font-size: 10px;
