--- a/src/modules/scss/bookList.scss
+++ b/src/modules/scss/bookList.scss
@@ -23,7 +23,7 @@
     gap: 7px;
     color: #5C6A79;
     font-family: $montserratMedium;
-    font-size: 12px;
+    font-size: 0.75rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -42,7 +42,7 @@
 .book-list__button_active{
     color: #1C2A39;
     font-family: $montserratBold;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .active{
@@ -52,7 +52,7 @@
 .book-list__load{
     font-family: $montserratBold;
     text-transform: uppercase;
-    font-size: 8px;
+    font-size: 0.5rem;
     border: 1px solid #4C3DB2;
     width: 176px;
     height: 45px;
