--- a/src/modules/scss/slider.scss
+++ b/src/modules/scss/slider.scss
@@ -30,7 +30,7 @@
     display: flex;
     align-items: end;
     font-family: $montserratBold;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -44,20 +44,20 @@
 .slider__card-link_violet{
     background-color: #9e98dc;
     background-position: bottom 19px left 20px;
-    height: 66px;
+    height: 204px;
     padding: 102px 20px 36px;
-    right: 74px;
+    right: 69px;
     top: 174px;
-    width: 109px;
+    width: 148px;
 }
 
 .slider__card-link_pink{
     background-color: #ff8fe6;
     background-position: bottom 19px left 21px;
-    height: 88px;
+    height: 273px;
     padding: 149px 47px 36px 21px;
     right: 0;
-    width: 68px;
+    width: 132px;
     top: 454px;
 }
 
@@ -99,6 +99,15 @@
         height: 600px;
     }
 
+    .slider__card-link_violet{
+        width: 132px;
+        right: 36px;
+    }
+
+    .slider__card-link_pink{
+        height: 236px;
+    }
+
 }
 
 @media (max-width: 768px){
@@ -120,16 +129,20 @@
     .slider__card-link_pink{
         padding-top: 15px;
         padding-left: 5px;
-        font-size: 14px;
+        font-size: 0.875rem;
         width: auto;
     }
 
     .slider__card-link_violet{
         top: 115px;
+        height: 139px;
+        right: 6px;
+        width: 89px;
     }
 
     .slider__card-link_pink{
         top: 345px;
+        height: 138px;
     }
 }
 
@@ -152,14 +165,15 @@
     .slider__card-link_pink{
         background-size: 40%;
         padding: 5px 5px 10px;
-        font-size: 8px;
+        font-size: 0.5rem;
         box-sizing: border-box;
     }
 
     .slider__card-link_violet{
+        width: 50px;
         background-position-x: 6px;
-        background-position-y: 41px;
-        height: 50px;
+        background-position-y: 55px;
+        height: 64px;
         top: 93px;
         right: 20px;
     }
@@ -167,7 +181,7 @@
     .slider__card-link_pink{
         background-position-x: 6px;
         background-position-y: 50px;
-        font-size: 8px;
+        font-size: 0.5rem;
         height: 60px;
         top: 180px;
     }
