The request to the server has been configured, and the styles for the rating stars have been fixed

--- a/src/modules/scss/bookList.scss
+++ b/src/modules/scss/bookList.scss
@@ -70,6 +70,12 @@
     background: #4C3DB2;
 }
 
+@media (max-width: 1240px){
+    .book-list__menu ul{
+        padding-left: 15%;
+    }
+}
+
 @media (max-width: 1024px){
     .book-list__menu{
         width: 316px;
